# MacOs-WuWa-fps-unlocker

./: .gitignore  Cargo.toml  Dioxus.toml  README.md
assets/: main.css
assets/styling/: main.css
src/: main.rs
src/components/: menu.rs  mod.rs
src/helpers/: db_helpers.rs  mod.rs  system_handlers.rs
